force-app/main/default/objects/Commercial_BRD_Process__c/Commercial_BRD_Process__c.object-meta.xml
<CustomObject>
    <description>BRD Process for the Commercial Team</description>
    <label>Commercial BRD Process</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Commercial BRD Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial BRD Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>