force-app/main/default/objects/Commercial_BRD_Process__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>Text(  Opportunity__r.Account.Account_Status__c  )</formula>
    <inlineHelpText>Displays the Account Status that is selected on the Account record</inlineHelpText>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>