force-app/main/default/objects/Commercial_BRD_Process__c/fields/Additional_Financial_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Financial_Assumptions__c</fullName>
    <inlineHelpText>Provide a brief overview of anticipated annual growth rate outside of year 1</inlineHelpText>
    <label>Additional Financial Assumptions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>