force-app/main/default/objects/Commercial_BRD_Process__c/fields/Additional_Order_Handling_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Order_Handling_Information__c</fullName>
    <inlineHelpText>Describe the requirement so that it is understandable to the customer/end user; make sure to have adequate precision for completeness and freedom from ambiguity.</inlineHelpText>
    <label>Additional Order Handling Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>