force-app/main/default/objects/Commercial_BRD_Process__c/fields/Additional_Return_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Return_Requirements__c</fullName>
    <inlineHelpText>Describe the requirement so that it is understandable to the customer/end user; make sure to have adequate precision for completeness and freedom from ambiguity.</inlineHelpText>
    <label>Additional Return Requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>