force-app/main/default/objects/Commercial_BRD_Process__c/fields/Are_substitutions_allowable__c.field-meta.xml
<CustomField>
    <fullName>Are_substitutions_allowable__c</fullName>
    <label>Are substitutions allowable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>