force-app/main/default/objects/Commercial_BRD_Process__c/fields/Are_there_authorized_buyers__c.field-meta.xml
<CustomField>
    <fullName>Are_there_authorized_buyers__c</fullName>
    <label>Are there authorized buyers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>