force-app/main/default/objects/Commercial_BRD_Process__c/fields/BRD_Owner__c.field-meta.xml
<CustomField>
    <fullName>BRD_Owner__c</fullName>
    <formula>Opportunity__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRD Owner</label>
    <type>Text</type>
</CustomField>