force-app/main/default/objects/Commercial_BRD_Process__c/fields/Business_Area_Stakeholders_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Business_Area_Stakeholders_Impacted__c</fullName>
    <inlineHelpText>If Selected then Approval by that team is required</inlineHelpText>
    <label>Business Area Stackholders Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>Inventory Replenishment</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Delivery &amp; Routing</fullName>
            </value>
            <value>
                <fullName>Credit Team/Commercial Credit</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>