force-app/main/default/objects/Commercial_BRD_Process__c/fields/Commercial_BRD_Owner__c.field-meta.xml
<CustomField>
    <fullName>Commercial_BRD_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial BRD Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_BRD_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>