force-app/main/default/objects/Commercial_BRD_Process__c/fields/Company_Background__c.field-meta.xml
<CustomField>
    <fullName>Company_Background__c</fullName>
    <description>Provide a brief overview of the company and the products we anticipate providing</description>
    <inlineHelpText>Provide a brief overview of the company and the products we anticipate providing</inlineHelpText>
    <label>Company Background</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>