force-app/main/default/objects/Commercial_BRD_Process__c/fields/Confirmation_of_return_exchange_required__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_return_exchange_required__c</fullName>
    <label>Confirmation of return/exchange required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Web/Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>