force-app/main/default/objects/Commercial_BRD_Process__c/fields/Current_Annual_Purchase_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Annual_Purchase_Volume__c</fullName>
    <label>Current Annual Purchase Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>