force-app/main/default/objects/Commercial_BRD_Process__c/fields/Current_Provider_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_of_Service__c</fullName>
    <description>Include current volume if available</description>
    <inlineHelpText>Include current volume if available</inlineHelpText>
    <label>Current Provider of Service</label>
    <type>TextArea</type>
</CustomField>