force-app/main/default/objects/Commercial_BRD_Process__c/fields/Customer_plans_on_paying_for_purchases__c.field-meta.xml
<CustomField>
    <fullName>Customer_plans_on_paying_for_purchases__c</fullName>
    <label>Customer plans on paying for purchases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Credit</fullName>
            </value>
            <value>
                <fullName>3rd Party Credit</fullName>
            </value>
            <value>
                <fullName>Check / Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>