force-app/main/default/objects/Commercial_BRD_Process__c/fields/District_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.ManagerId</field>
            <operation>equals</operation>
            <valueField>$User.ManagerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_BRD_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>