force-app/main/default/objects/Commercial_BRD_Process__c/fields/Documentation_required_for_payment__c.field-meta.xml
<CustomField>
    <fullName>Documentation_required_for_payment__c</fullName>
    <label>Documentation required for payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Lien Waiver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>