force-app/main/default/objects/Commercial_BRD_Process__c/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <inlineHelpText>Units/Year</inlineHelpText>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>