force-app/main/default/objects/Commercial_BRD_Process__c/fields/Has_Quote_been_attached_to_BRD_Process__c.field-meta.xml
<CustomField>
    <fullName>Has_Quote_been_attached_to_BRD_Process__c</fullName>
    <inlineHelpText>Quote must include Item #, Description, Delivery, Misc Services and Pricing</inlineHelpText>
    <label>Has Quote been attached to BRD Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>