force-app/main/default/objects/Commercial_BRD_Process__c/fields/Haul_away_of_old_appliances_required__c.field-meta.xml
<CustomField>
    <fullName>Haul_away_of_old_appliances_required__c</fullName>
    <label>Haul away of old appliances required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>