force-app/main/default/objects/Commercial_BRD_Process__c/fields/How_will_orders_be_received__c.field-meta.xml
<CustomField>
    <fullName>How_will_orders_be_received__c</fullName>
    <label>How will orders be received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web/Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>