force-app/main/default/objects/Commercial_BRD_Process__c/fields/Lead_time_to_requested_delivery__c.field-meta.xml
<CustomField>
    <fullName>Lead_time_to_requested_delivery__c</fullName>
    <inlineHelpText>Minimum of 72 business hours</inlineHelpText>
    <label>Lead time to requested delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Days</fullName>
            </value>
            <value>
                <fullName>5 Days</fullName>
            </value>
            <value>
                <fullName>7 Days</fullName>
            </value>
            <value>
                <fullName>Or Greater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>