force-app/main/default/objects/Commercial_BRD_Process__c/fields/Pay_application_required__c.field-meta.xml
<CustomField>
    <fullName>Pay_application_required__c</fullName>
    <label>Pay application required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>