force-app/main/default/objects/Commercial_BRD_Process__c/fields/Potential_Annual_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Sales_Volume__c</fullName>
    <formula>TEXT( Opportunity__r.Account.Potential_Annual_Sales_Volume__c )</formula>
    <inlineHelpText>Displays the Potential Annual Sales Volume that is selected on the Account record</inlineHelpText>
    <label>Potential Annual Sales Volume</label>
    <type>Text</type>
</CustomField>