force-app/main/default/objects/Commercial_BRD_Process__c/fields/Pricing_utilized_for_order_placement__c.field-meta.xml
<CustomField>
    <fullName>Pricing_utilized_for_order_placement__c</fullName>
    <inlineHelpText>Only 1 NPL can be select in conjunction with a CPL</inlineHelpText>
    <label>Pricing utilized for order placement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NPL 10</fullName>
            </value>
            <value>
                <fullName>NPL 20</fullName>
            </value>
            <value>
                <fullName>NPL 30</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>