force-app/main/default/objects/Commercial_BRD_Process__c/fields/Project_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Project_Annual_Revenue__c</fullName>
    <label>Project Annual Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>