force-app/main/default/objects/Commercial_BRD_Process__c/fields/Provide_any_additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Provide_any_additional_notes__c</fullName>
    <inlineHelpText>Any Additional information the Account Manager or District Manager may feel is critical to the successful handling of this customer</inlineHelpText>
    <label>Provide any additional notes</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>