force-app/main/default/objects/Commercial_BRD_Process__c/fields/Receipt_confirmation_Req_via__c.field-meta.xml
<CustomField>
    <fullName>Receipt_confirmation_Req_via__c</fullName>
    <label>Receipt confirmation Req. via</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web/Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>