force-app/main/default/objects/Commercial_BRD_Process__c/fields/Required_exchange_timeframe__c.field-meta.xml
<CustomField>
    <fullName>Required_exchange_timeframe__c</fullName>
    <inlineHelpText>Number of days from request to the day of exchange</inlineHelpText>
    <label>Required exchange timeframe</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>