force-app/main/default/objects/Commercial_BRD_Process__c/fields/Return_Exchanges_must_be_authorized__c.field-meta.xml
<CustomField>
    <fullName>Return_Exchanges_must_be_authorized__c</fullName>
    <inlineHelpText>Authorized prior to processing</inlineHelpText>
    <label>Return/Exchanges must be authorized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>