force-app/main/default/objects/Commercial_BRD_Process__c/fields/Sears_Commercial_Return_Policy_agreed_to__c.field-meta.xml
<CustomField>
    <fullName>Sears_Commercial_Return_Policy_agreed_to__c</fullName>
    <label>Sears Commercial Return Policy agreed to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>