force-app/main/default/objects/Commercial_BRD_Process__c/fields/Separate_email_address_required__c.field-meta.xml
<CustomField>
    <fullName>Separate_email_address_required__c</fullName>
    <label>Separate email address required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>