force-app/main/default/objects/Commercial_BRD_Process__c/fields/Separate_TFN_required__c.field-meta.xml
<CustomField>
    <fullName>Separate_TFN_required__c</fullName>
    <inlineHelpText>Toll Free Number</inlineHelpText>
    <label>Separate TFN required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>