force-app/main/default/objects/Commercial_BRD_Process__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <description>List any non-standard processes or products, i.e. invoicing, high-end appliances, etc.</description>
    <inlineHelpText>List any non-standard processes or products, i.e. invoicing, high-end appliances, etc.</inlineHelpText>
    <label>Special Requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>