force-app/main/default/objects/Commercial_BRD_Process__c/fields/SPOC_required_for_credit_inv_inquiries__c.field-meta.xml
<CustomField>
    <fullName>SPOC_required_for_credit_inv_inquiries__c</fullName>
    <inlineHelpText>Single Point of Contact</inlineHelpText>
    <label>SPOC required for credit/inv. inquiries</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>