force-app/main/default/objects/Commercial_BRD_Process__c/fields/Standard_hook_up_requested__c.field-meta.xml
<CustomField>
    <fullName>Standard_hook_up_requested__c</fullName>
    <label>Standard hook up requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>