force-app/main/default/objects/Commercial_BRD_Process__c/fields/Third_Party_Installation_may_be_required__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Installation_may_be_required__c</fullName>
    <label>Third Party Installation may be required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>