force-app/main/default/objects/Commercial_BRD_Process__c/fields/Turneraround_time_for_order_placement__c.field-meta.xml
<CustomField>
    <fullName>Turneraround_time_for_order_placement__c</fullName>
    <inlineHelpText>Customer expectations of Order Confirmations time frame</inlineHelpText>
    <label>Turneraround time for order placement</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>